--- a/assignments/assignment1/index.html
+++ b/assignments/assignment1/index.html
@@ -19,11 +19,10 @@
             </div>
             <div class="col-12">
                 <label for="inputAddress" class="form-label">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="Ex:1234 Main St">
+                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
             </div>
             <div class="col-md-6">
                 <label for="inputCity" class="form-label">City</label>
-                <input type="text" class="form-control" id="inputCity" placeholder="Ex:Chicago">
                 <input type="text" class="form-control" id="inputCity">
             </div>
             <div class="col-md-4">
@@ -39,7 +38,6 @@
             <div class="col-md-2">
                 <label for="inputZip" class="form-label">Zip</label>
                 <input type="text" class="form-control" id="inputZip">
-                <input type="text" class="form-control" id="inputZipCode" placeholder="6 dight area code">
             </div>
             <div class="col-12">
             </div>
@@ -47,12 +45,10 @@
             <div class="col-md-6">
                 <label for="inputPhoneNumber" class="form-label">Phone</label>
                 <input type="phoneNumber" class="form-control" id="inputPhoneNumber">
-                <input type="text" class="form-control" id="inputPhoneNumber" placeholder="Ex:734-554-7501">
             </div>
             <div class="col-md-6">
                 <label for="inputEmail4" class="form-label">Email</label>
                 <input type="email" class="form-control" id="inputEmail4">
-                <input type="text" class="form-control" id="inputEmail" placeholder="Ex: email@gmail.com>
             </div>
             <div>
                 <textbox for="captionPC" class="form-textbox">Preferred Contact Method</textbox>
